# RaspPi-Remote-Worker

./: .gitignore  0-project-overview.md  README.md  RaspPi-Remote-Worker.code-workspace  project-overview.md  pyproject.toml  raspi-helper.ps1  raspi-helper.sh  setup.sh  setup_initial.sh  setup_systemd.sh
docs/: 0-concise-tasks.md  0-next-steps.md  0-project-overview.md  Raspberry Pi Remote Worker - Setup & Management.md  environment-setup.md  focus.md  handy.md  implementation-ideas.md  later.md  phase-2-runner-logic.md  project-overview.md  script_ideas.md
docs/knowledge/: BASH.md  POWERSHELL.md  Symbolic_Regression.md
docs/other/: RASP_PI_SETUP.md  SD_CARD_FORMAT.md  VS_CODE_SSH_SETUP.md  environment-setup.md
docs/scripts/: CONTROL_PANEL_README.md  PRIME_HUNTER_README.md  RASPI_HELPER_PSI.md  RASPI_HELPER_SH.md  RASP_PI_README.md  RUNNER_README.md  SERVICE_README.md  SETUP_HELPERS_README.md  SETUP_QUICKSTART.md  SETUP_SH_README.md  TEST_CONNECTION_README.md
rasp-pi/: cmdline.txt
scripts/: other-ideas.py  prime_hunter.py  pulse_monitor.py  runner.py  test_connection.py
scripts/utils/: control_panel.py  list_sheets.py
