[project]
name = "remote-worker"
version = "0.1.0"
description = "Raspberry Pi Remote Worker - Google Sheets task runner"
requires-python = ">=3.10"

dependencies = [
    "gspread>=6.0.0",
    "oauth2client>=4.1.3",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remote_worker"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
